--- a/static/scrobble-shelf.css
+++ b/static/scrobble-shelf.css
@@ -30,7 +30,12 @@ body {
     text-align: left;
 }
 .shelf-title, .shelf-artist {
+    width: 225px;
+    overflow: hidden;
+    white-space: nowrap;
+    display: block;
     pointer-events: none;
+    text-overflow: ellipsis;
 }
 .shelf-title {
     font-weight: 600;
