--- a/static/scrobble-shelf.css
+++ b/static/scrobble-shelf.css
@@ -1,13 +1,16 @@
 body {
     font-family: 'Lato', 'Helvetica', 'Helvetica Neue', sans-serif;
 }
+
 html {
     border: solid 15px #000;
 }
+
 #scrobble-shelf {
     text-align: center;
     width: 100%;
 }
+
 #title-header {
     font-size: 80px;
     margin-right: 55px;
@@ -17,11 +20,13 @@ html {
     font-weight: 300;
     font-family: "Lato", sans-serif;
 }
+
 @media (max-width: 830px) {
-    #title-header{
+    #title-header {
         font-size: 50px;
     }
 }
+
 .shelf-item {
     width: 300px;
     height: 300px;
@@ -39,61 +44,68 @@ html {
     }
 }
 
-.shelf-item:active, .shelf-item:hover {
+.shelf-item:active,
+.shelf-item:hover {
     transform: scale(1.05);
-    box-shadow: 2px 2px 20px 0px rgba(0,0,0,.5);
+    box-shadow: 2px 2px 20px 0px rgba(0, 0, 0, .5);
     transition: transform 100ms ease-in, box-shadow 100ms ease-in;
 }
-.shelf-item-contents:active, .shelf-item-contents:hover {
+
+.shelf-item-contents:active,
+.shelf-item-contents:hover {
     opacity: 1;
 }
+
 .shelf-item-contents {
     height: 100%;
     width: 100%;
-    position: absolute;
+    padding: 120px 20px 0;
+    box-sizing: border-box;
     top: 0px;
     left: 0px;
     border-radius: 8px;
     color: #fff;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0, 0, 0, 0.6);
     opacity: 0;
     text-align: left;
     transition: opacity 100ms ease-in;
 }
+
 .album-link {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
+    text-decoration: none;
 }
-.shelf-title, .shelf-artist {
-    width: 225px;
+
+.shelf-title,
+.shelf-artist {
+    width: 75%;
     overflow: hidden;
     white-space: nowrap;
     display: block;
     pointer-events: none;
     text-overflow: ellipsis;
-    margin-left: 20px;
 }
+
 .shelf-title {
-    margin-top: 120px;
     font-weight: 300;
     font-size: 18px;
 }
+
 .shelf-artist {
     font-weight: 400;
     font-size: 16px;
 }
-.shelf-item.no-img > .shelf-item-contents {
+
+.shelf-item.no-img>.shelf-item-contents {
     opacity: 1;
 }
+
 .project-link {
     font-size: 12px;
     font-weight: 400;
     text-align: left;
 }
-.project-link > a {
+
+.project-link>a {
     text-decoration: none;
     color: #d60000;
 }
-
