--- a/static/scrobble-shelf.css
+++ b/static/scrobble-shelf.css
@@ -16,6 +16,7 @@ body {
 #title-header {
     font-size: 80px;
     margin-right: 55px;
+    margin-left: 55px;
     text-align: right;
     margin-bottom: 35px;
     margin-top: 50px;
