improved arrow key interactions with cursor context

--- a/static/scrobble-shelf.css
+++ b/static/scrobble-shelf.css
@@ -87,6 +87,10 @@ body {
     opacity: 1;
 }
 
+#scrobble-shelf.arrow-nav-active .shelf-item {
+    pointer-events: none;
+}
+
 .shelf-item-contents {
     height: 100%;
     width: 100%;
