--- a/static/scrobble-shelf.css
+++ b/static/scrobble-shelf.css
@@ -115,6 +115,10 @@ body {
 }
 
 .album-link {
+    display: block;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
     text-decoration: none;
 }
 
